Modify heading content in index.html
Updated the second heading to include a heart symbol and a name.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 <body>
     <div class="container">
         <h1>I LOVE YOU</h1>
-        <h2>MARRON JUSTIN PACLIBAR</h2>
+        <h2> ♡⁠(⁠>Cindy<⁠)⁠♡ </h2>
     </div>
     <script src="scripts.js"></script>
 </body>
 </html>
+
