--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: #f8f8f8 url('i.jpg') center/cover;
+            background: #f8f8f8 url('M.jpg') center/cover;
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -68,5 +68,6 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
