--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>I LOVE YOU</h1>
+        <h1>Merry Christmas</h1>
         <h2> ♡⁠(⁠>Cindy<⁠)⁠♡ </h2>
     </div>
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
